Added capability for loading GML from WFS.
git-svn-id: http://svn.esdi-humboldt.eu/repo/humboldt2/trunk@3300 5d385326-3dfc-11dd-8f4f-eb0017f4c70c